<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbrirDisplayMessageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="1dp"
        android:onClick="onClickBotonAccion"
        android:text="@string/btnAccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTel" />

    <fragment
        android:id="@+id/fragment2"
        android:name="genaromendez.com.myapp.Fragment_1"
        android:layout_width="300dp"
        android:layout_height="154dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbrirActivityMapa"
        tools:layout="@layout/fragment_1" />

    <EditText
        android:id="@+id/editDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:ems="10"
        android:hint="@string/lblDir"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNom" />

    <EditText
        android:id="@+id/editTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:ems="10"
        android:hint="@string/editTel"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDir" />

    <Button
        android:id="@+id/btnAbrirActivityMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="11dp"
        android:text="@string/btnAbrirActivityMapa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbrirActivityFoto" />

    <Button
        android:id="@+id/btnAbrirActivityFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="26dp"
        android:text="@string/btnAbrirActivityFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbrirDisplayMessageActivity" />


</android.support.constraint.ConstraintLayout>